force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c.object-meta.xml
<CustomObject>
    <description>SLA Milestone Problem Transaction records.</description>
    <label>SLA Milestone Problem Transaction</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Problem Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Problem Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>