force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c/fields/BMCServiceDesk__FKProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Problem record related to this milestone / SVT</description>
    <label>Problem</label>
    <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
    <relationshipLabel>SLA Milestone Problem Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Problem_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>