force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c/fields/BMCServiceDesk__FKProblem_Service_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem_Service_Target__c</fullName>
    <description>Problem Service Target that is related to this milestone.</description>
    <label>Problem Service Target</label>
    <referenceTo>BMCServiceDesk__Problem_Service_Target__c</referenceTo>
    <relationshipLabel>SLA Milestone Problem Transaction</relationshipLabel>
    <relationshipName>SLA_Milestone_Problem_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>