force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c/fields/BMCServiceDesk__To__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__To__c</fullName>
    <label>To</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>