force-app/main/default/objects/BMCServiceDesk__SLA_Milestone_Problem_Transaction__c/fields/BMCServiceDesk__User_Ref_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__User_Ref_ID__c</fullName>
    <label>User Ref ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>